Fix squished scan page display on small screens

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -46,6 +46,10 @@
     padding-bottom: 12px;
 }
 
+#file-group {
+    width: 100%;
+}
+
 #module-opts {
     display: inline-block;
 }
